--- a/bp/index.html
+++ b/bp/index.html
@@ -1969,7 +1969,7 @@ function ev_tsch_input(e) {
 			if (csrch_name_rom && o.rom.toLowerCase().indexOf(txt) !== -1)
 				return true;
 			
-			if (csrch_loc && o.loc.toLowerCase().indexOf(wtxt) !== -1)
+			if (csrch_loc && o.loc.toLowerCase().indexOf(txt) !== -1)
 				return true;
 			
 			if (o.url)
